@@ -19,5 +19,7 @@ int main() {
   assert(imult64(-0x4000000000000000ll,2,&c)==1 && c==(int64)-0x8000000000000000ll);
   assert(imult64(0x3fffffffffffffffll,2,&c)==1 && c==0x7ffffffffffffffell);
 
+  assert(umult64(0x0000000100000002ull,0x00000000ffffffffull,&c)==0);
+
   return 0;
 }
